# trackr

./: .envrc.example  Cargo.toml  Dockerfile  fly.toml
.github/workflows/: fly.yml  general.yml
.sqlx/: query-2bebbdb7e1c87c9c63269cd0c12ed2eea1a813dd13a2c2936f79ef4498d6df63.json  query-2e4b3f2ed2511950dc33ee6ffbd661bd90f72573532f212c96d65d0072bebb39.json  query-35eb8e20598292091c165373a9afb4e2a8118b743cb63dfb0bb205b327e6b039.json  query-4d4f49db967b81b1ae31b1986dd889583161c5e3b84122bdc31652f0375d1a4e.json  query-df5fc20142b866e0508ee65cb39a2414aa159f71718ac3927ee5883c2291c8e2.json  query-ed7dde293d1f1aacbe5fa8c4487728782b71aa7237050c4c97f41e612e6e189d.json  query-f14a05ef4fa8d21dde8c0fc7d74d05dd0406de62434f542e73705725a03b185b.json
fly/: fly.toml
fly/trackr-prod/: fly.toml
migrations/: 20231013134421_add_users_table.sql  20231013141458_add_links_table.sql  20231013143016_add_link_labels.sql  20231013150822_add_user_sessions_table.sql  20231016154359_drop_password_salt_column.sql
scripts/: init_db.sh
src/: db.rs  domain.rs  lib.rs  main.rs  routes.rs
src/domain/: account.rs  link.rs
src/routes/: add_link.rs  create_user.rs  login.rs
